# hdl_designs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
CMake/: FindModelSim.cmake  Findiverilog.cmake  HDL.cmake
rtl/: CMakeLists.txt  adder.sv  counter.sv
rtl/interfaces/: adder_if.svh
tb/: CMakeLists.txt  adder_tb.sv  counter_tb.sv
